# KO-proposal-agent-orchestrator

./: .gitignore  README.md  pyproject.toml
agents/: main_agent.yaml
agents/sub_agents/: coder.yaml  file_worker.yaml  researcher.yaml  tool_operator.yaml
apps/api_server/: __init__.py  main.py
apps/cli/: __init__.py  main.py  repl.py  runner.py
apps/ui/: .env.example  __init__.py  index.html  package-lock.json  package.json  vite.config.js
config/: default.yaml  env.example  models.yaml  permissions.yaml  runtimes.yaml  tools.yaml
core/: __init__.py
core/agent/: __init__.py  base.py  definition.py  delegation.py  state.py
core/events/: __init__.py  bus.py  trace.py  types.py
core/executor/: __init__.py  base.py  retry.py
core/memory/: __init__.py  base.py
core/model/: __init__.py  base.py  router.py
core/permissions/: __init__.py  base.py  checker.py
core/planner/: __init__.py  base.py  sequential.py  task_graph.py
core/runtime/: __init__.py  base.py  registry.py
core/tooling/: __init__.py  base.py  registry.py
docs/: architecture.md
html/: _nav.html  agents.html  api.html  architecture.html  cli.html  events.html  index.html  mcp.html  model.html  permissions.html  quickstart.html  runtimes.html  skills.html  style.css  testing.html
mcp/: __init__.py
mcp/adapters/: __init__.py  base.py  mcp_adapter.py
mcp/configs/: brave_search.yaml  filesystem_server.yaml
mcp/servers/: README.md
runtimes/: __init__.py
runtimes/api/: __init__.py  runtime.py
runtimes/browser/: __init__.py  (+1 more)
scripts/: run_agent.sh  run_tests.sh  setup_local.sh
(+35 files in other folders)
