[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gemma-agent"
version = "0.1.0"
description = "Local agent system powered by Gemma 4"
requires-python = ">=3.11"

dependencies = [
    # Core
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "anyio>=4.0",

    # Model backends
    "ollama>=0.2",           # Gemma 4 local via Ollama
    "openai>=1.30",          # OpenAI API fallback
    "anthropic>=0.28",       # Anthropic API fallback
    "httpx>=0.27",           # Shared HTTP client

    # Memory / embeddings
    "chromadb>=0.5",
    "sentence-transformers>=3.0",

    # Apps
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "typer>=0.12",
    "rich>=13.0",

    # MCP
    "mcp>=1.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.44"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",     # for TestClient
]

[project.scripts]
agent = "apps.cli.main:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
